DoorIntegration/force-app/main/default/objects/Door_Integration__c/Door_Integration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>stores door integration related data</description>
    <label>Door Integration</label>
</CustomObject>