DoorIntegration/force-app/main/default/objects/Door_Integration__c/fields/Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Access_Token__c</fullName>
    <description>Stores access token for door integration</description>
    <label>Access Token</label>
    <length>200</length>
    <type>Text</type>
</CustomField>