DoorIntegration/force-app/main/default/objects/Door_Integration__c/fields/API_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>API_Endpoint__c</fullName>
    <description>Stores door API endpoint</description>
    <label>API Endpoint</label>
    <length>100</length>
    <type>Text</type>
</CustomField>