DoorIntegration/force-app/main/default/objects/Door_Integration__c/fields/password__c.field-meta.xml
<CustomField>
    <fullName>password__c</fullName>
    <description>Stores password of door instance</description>
    <label>password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>