DoorIntegration/force-app/main/default/objects/Door_Integration__c/fields/Token_Creation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Token_Creation_Date_Time__c</fullName>
    <description>Stores token creation date and time</description>
    <label>Token Creation Date Time</label>
    <type>DateTime</type>
</CustomField>