DoorIntegration/force-app/main/default/objects/Door_Integration__c/fields/username__c.field-meta.xml
<CustomField>
    <fullName>username__c</fullName>
    <description>Stores username of door instance</description>
    <label>username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>